Agrega el ejercicio 5 en el index.html

--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
         <div class="ejercicios ejercicios--ejercicio4">
           <h3 class="ejercicios__titulo">Ejercicio 4:</h3>
           <p class="ejercicios__descripcion">Lorem ipsum dolor sit.</p>
-          <a class="ejercicios__enlace ejercicios__enlace--4" href="html/ejercicio4.html">Ver ejercicio 3</a>
+          <a class="ejercicios__enlace ejercicios__enlace--4" href="html/ejercicio4.html">Ver ejercicio 4</a>
         </div>
 
+        <div class="ejercicios ejercicios--ejercicio5">
+          <h3 class="ejercicios__titulo">Ejercicio 5:</h3>
+          <p class="ejercicios__descripcion">Lorem ipsum dolor sit.</p>
+          <a class="ejercicios__enlace ejercicios__enlace--4" href="html/ejercicio5.html">Ver ejercicio 5</a>
+        </div>
     </div>
 
     
