--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
           <a class="ejercicios__enlace ejercicios__enlace--15" href="html/ejercicio15.html">Ver ejercicio 15</a>
         </div>
 
+        <!-- EJERCICIO 16 -->
+        <div class="ejercicios ejercicios--tabla">
+          <h3 class="ejercicios__titulo">Ejercicio 16:</h3>
+          <p class="ejercicios__descripcion">Sistema de alerta temprana para una red social.</p>
+          <a class="ejercicios__enlace ejercicios__enlace--16" href="html/ejercicio16.html">Ver ejercicio 16</a>
+        </div>
+
+        <!-- EJERCICIO 17 -->
+        <div class="ejercicios ejercicios--tabla">
+          <h3 class="ejercicios__titulo">Ejercicio 17:</h3>
+          <p class="ejercicios__descripcion">Sistema de control de inventarios dinámicos.</p>
+          <a class="ejercicios__enlace ejercicios__enlace--17" href="html/ejercicio17.html">Ver ejercicio 17</a>
+        </div>
     </div>
 
    
