Agrega los ejercicios finales a excepcion del 15 al 17

--- a/html/ejercicio16.html
+++ b/html/ejercicio16.html
@@ -6,7 +6,8 @@
     <title>ejercicio 16</title>
 </head>
 <body>
-    
+
+    <h1>Uy no ticher</h1>
     <script type="module" src="../ejercicios/ejercicio17.js"></script>
 
 </body>
